[package]
name = "dmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yup-oauth2 = "5.0.1"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.7.1", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
dotenv = "0.15.0"
serenity = "0.10.9"
